// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomNavigation should be able to render correctly 1`] = `
<footer
  class="md-paper md-paper--1 md-bottom-navigation md-background--card"
  role="navigation"
>
  <a
    aria-pressed="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--active md-bottom-nav--fixed md-text--theme-primary"
    tabindex="0"
  >
    <div
      class="md-ink-container"
    />
    <div
      class="md-bottom-nav-label"
      style="overflow: hidden;"
    >
      One
    </div>
  </a>
  <a
    aria-pressed="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--fixed md-text"
    tabindex="0"
  >
    <div
      class="md-ink-container"
    />
    <div
      class="md-bottom-nav-label"
      style="overflow: hidden;"
    >
      Two
    </div>
  </a>
  <a
    aria-pressed="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--fixed md-text"
    tabindex="0"
  >
    <div
      class="md-ink-container"
    />
    <div
      class="md-bottom-nav-label"
      style="overflow: hidden;"
    >
      Three
    </div>
  </a>
</footer>
`;

exports[`BottomNavigation should be able to render correctly 2`] = `
<footer
  class="md-paper md-paper--1 md-bottom-navigation md-background--primary"
  role="navigation"
>
  <a
    aria-pressed="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--active md-bottom-nav--fixed"
    tabindex="0"
  >
    <div
      class="md-ink-container"
    />
    <div
      class="md-bottom-nav-label"
      style="overflow: hidden;"
    >
      One
    </div>
  </a>
  <a
    aria-pressed="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--fixed"
    tabindex="0"
  >
    <div
      class="md-ink-container"
    />
    <div
      class="md-bottom-nav-label"
      style="overflow: hidden;"
    >
      Two
    </div>
  </a>
  <a
    aria-pressed="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--fixed"
    tabindex="0"
  >
    <div
      class="md-ink-container"
    />
    <div
      class="md-bottom-nav-label"
      style="overflow: hidden;"
    >
      Three
    </div>
  </a>
</footer>
`;

exports[`BottomNavigation should be able to render correctly 3`] = `
<footer
  class="md-paper md-paper--1 md-bottom-navigation md-background--primary md-bottom-navigation--dynamic"
  role="navigation"
>
  <a
    aria-pressed="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--active md-bottom-nav--fixed"
    tabindex="0"
  >
    <div
      class="md-ink-container"
    />
    <div
      class="md-bottom-nav-label"
      style="overflow: hidden;"
    >
      One
    </div>
  </a>
  <a
    aria-pressed="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--fixed"
    tabindex="0"
  >
    <div
      class="md-ink-container"
    />
    <div
      class="md-bottom-nav-label"
      style="overflow: hidden;"
    >
      Two
    </div>
  </a>
  <a
    aria-pressed="false"
    class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-bottom-nav md-bottom-nav--fixed"
    tabindex="0"
  >
    <div
      class="md-ink-container"
    />
    <div
      class="md-bottom-nav-label"
      style="overflow: hidden;"
    >
      Three
    </div>
  </a>
</footer>
`;
